# time_interval_data_storage

./: .gitignore  CMakeLists.txt  README.txt  TimeIntervalDataStorage.h  main.cpp  setup.sh
include/: TimeIntervalSumCalculator.h  numbersStreamParser.h  server.h  session.h
server/: CMakeLists.txt
server/include/: BacklogNumbersStreamParser.h  ILogger.h  INumbersStreamParser.h  ISumCalculator.h  ITimeProvider.h  MultiSessionServer.h  StdLogger.h  StdTimeProvider.h  TimeIntervalSumCalculator.h  TimeIntervalSumSession.h  calculator.h  logger.h  parser.h  server.h  session.h  timeprovider.h
server/src/: main.cpp
test/: CMakeLists.txt  calculator_test.cpp  parser_test.cpp  test.cpp
